# nhor

./: .dockerignore  .gitignore  .gitmodules  ATTRIBUTES_BUG.md  BLAZOR_CONVERTER.md  CLAUDE.md  Directory.Build.props  Dockerfile  GUI.md  Nhor.slnx  RAZOR.md  STYLING.md  VALUE_LIST.md  Winter.slnx
examples/Accessor/: Program.cs
examples/Animation/: Program.cs
examples/BlazorInstaller/: BlazorInstaller.csproj  InstallerApp.razor  Program.cs  _Imports.razor
examples/Blending/: Program.cs
examples/BoundingBox/: Program.cs
examples/Clipping/: Program.cs
examples/CustomTransform/: Program.cs
examples/DataLoad/: Program.cs
examples/DirectUpdate/: Program.cs
examples/Duplicate/: Program.cs
examples/EffectDropShadow/: Program.cs
examples/ExampleFramework/: ExampleBase.cs  ExampleFramework.csproj  ExamplePaths.cs  ExampleRunner.cs  ExampleWindow.cs
examples/FillRule/: Program.cs
examples/FillSpread/: Program.cs
examples/GifSaver/: Program.cs
examples/GradientMasking/: Program.cs
examples/GradientStroke/: Program.cs
examples/GradientTransform/: Program.cs
examples/ImageRotation/: Program.cs
examples/ImageScaling/: Program.cs
examples/Intersects/: Program.cs
examples/LinearGradient/: Program.cs
examples/Lottie/: Program.cs
examples/LottieExpressions/: Program.cs
examples/LottieExtension/: Program.cs
examples/LottieInteraction/: Program.cs
examples/LottieTweening/: Program.cs
examples/Masking/: Program.cs
examples/MaskingMethods/: Program.cs
ref/ThorVG/tools/lottie2gif-gl/: lottie2gif-gl.cpp  meson.build
src/Glfw/: init.cs  (+8 more)
(+399 files in other folders)
